# nhl-legacy-recomp

./: .gitignore  CMakeLists.txt  DEV-README.md  README.md  _audit.ps1  _build_beta.bat  _build_vk.bat  _build_vk_opt.bat  _build_vk_pgo.bat  _build_vk_pgogen.bat  _build_vkffx_incr.bat  _c5dump.ps1  _c5probe.ps1  _c5render.ps1  _c5renderdoc.ps1  _extract_textures.ps1  _ffx_sdk_build_install.bat  _ffx_sdk_configure.bat  _film.ps1  _game_ffx_build.bat  _highcut.ps1  _vkfps.ps1  _vklongshot.ps1  _vknet.ps1  _vkshot.ps1  _vktest.ps1  _vkwindowshot.ps1  build_out.txt  guest_stacks.txt  nhllegacy_functions.toml  nhllegacy_manifest.toml  run_beta.ps1  run_edram.ps1  run_oracle.ps1
docs/: agent-coordination-handoff.md  codebase-audit-findings.md  codebase-audit-prompt.md  codex-onboarding.md  cpu-perf-optimization-plan.md  current-status.md  edram-readback-instrument-prompt.md  engine-settings-editor-plan.md  faithful-edram-fold-handoff.md  fidelityfx-enablement-notes.md  franchise-injuries-reference.md  franchise_re_strings.txt  h3-3d-geometry-parity-plan.md  high-cut-pivot-and-tiling-investigation.md  highcut-c-plume-renderer-plan.md  highcut-c4-textures-prompt.md  highcut-c5-jersey-numbers-prompt.md  highcut-c5-restart-prompt.md  highcut-c5c-depth-stencil-prompt.md  highcut-c5g-jersey-numbers-next.md  highcut-c6-live-cache-prompt.md  highcut-composition-phase-next.md  highcut-h1-resource-graph.md  highcut-h2-plume-present.md  highcut-h3-flat-rt.md  highcut-h3-renderdoc-checklist.md  highcut-hybrid-kickoff.md  highcut-live-takeover-restart-prompt.md  highcut-m0-vendoring.md  highcut-m1-tap-correlation.md  highcut-p2b-translator-port-prompt.md  highcut-player-render-planning-prompt.md  mt-command-recording-handoff.md  nhl12-handoff-expadjust-fetchconstant-bug.md  phase0-d3d9-entry-points.txt  phase0-d3d9-hookability.md  plume-exclusive-pivot-plan.md  plume-readback-patch.md  renderdoc-hostrt-geometry-investigation.md  rexglue-source-gpu-texture-fix-prompt.md  (+12 more)
docs/nhl12-decomp-reference/: Conversation WIth Claude.md  HANDOFF.md  README.md  asset_formats.md  disc_inventory.csv  dup_bases.txt  editplayer-equipment-enumeration.md  jump_tables.md  kernel_imports.csv  kernel_imports.md  nhl12_crash_debugging.md  nhl12_equipment_db_color_notes.md  nhl12_renderer_regression_guardrails.md  nhl12_renderer_system_notes.md  nhl12_vp6_green_video_fix_plan.md  phase2_notes.md  renderer_investigation_blue_texture_bug.md  xex_analysis.md
docs/nhl12-decomp-reference/animation/: CONTINUE-anim-decode.md  animation-system.md  cba-format.md
docs/nhl12-decomp-reference/architecture/: main-loop.md  memory.md  overview.md  threading.md
docs/nhl12-decomp-reference/assets/: asset-pipeline.md
docs/nhl12-decomp-reference/audio/: audio-system.md
docs/nhl12-decomp-reference/gameplay/: ai.md  core-systems.md  goalies.md  puck-physics.md  rules.md  skating.md
docs/nhl12-decomp-reference/graphics/: cameras.md  rendering-pipeline.md  shaders-materials.md  textures-and-shaders-feeding.md
docs/nhl12-decomp-reference/maps/: codebase-map.md  function-index.md  global-state.md  glossary.md
docs/nhl12-decomp-reference/physics/: collision.md
docs/nhl12-decomp-reference/quirks/: gotchas.md  magic-values.md
docs/nhl12-decomp-reference/recompilation/: rexglue-runtime.md  xenondecomp-notes.md
docs/nhl12-decomp-reference/save-load/: serialization.md
gpu/hooks/: anim_capture.cpp  d3d9_resources.cpp  d3d9_tap.cpp  highcut_draw_packet.h  highcut_spirv_probe.cpp  plume_present.cpp
gpu/spirv/: spirv_builder.cc  spirv_shader.cc  spirv_shader_translator.cc  spirv_shader_translator_alu.cc  spirv_shader_translator_fetch.cc  spirv_shader_translator_memexport.cc  spirv_shader_translator_rb.cc  spirv_translator_tables.cc
release/: README.payload.md  THIRD-PARTY-NOTICES.txt  package.ps1
renderer/core/: nhl_command_processor.cpp  nhl_command_processor.h  nhl_graphics_system.cpp  nhl_graphics_system.h  nhl_input_gate.h  nhl_overlay.cpp  nhl_overlay.h  nhl_settings.h  nhl_tunable_store.h  nhl_vk_backend.cpp  nhl_vk_backend.h
scripts/: _build_vk_opt.bat  _build_vk_pgo.bat  _build_vk_pgogen.bat  _ffx_sdk_build_install.bat  _ffx_sdk_configure.bat  _game_ffx_build.bat  _sdk_build_rexruntime.bat
src/: anim_decode.cpp  anim_decode.h  cpu_affinity.cpp  diag_hooks.cpp  injection_registry.cpp  injection_registry.h  input_block.cpp  kernel_stubs.cpp  loose_tree_device.cpp  loose_tree_device.h  main.cpp  nhllegacy_app.h  overall_weights_dump.h  rx2_ffi.h  stick_caller_trace.h  stick_list_scan.h  tunable_registry_dump.h  tunable_runtime.h  union_device.cpp  union_device.h
tools/: _audit_png.py  _channels.py  _check_residency.py  _crop.py  _decode_opaque.py  _decode_slot.py  _extract_spirv.py  _find_goalie.py  _fingerprint_all.py  _goalie_state.py  _instrument_ps.py  _patch_bc5flat.py  _patch_expfix.py  _patch_slot15.py  _patch_texfill.py  _scan_player_draws.py  _spirv_slice.py  _stub_census.py  analyze_3d_draws.py  annotate_guest_stacks.py  cba_parse.py  color_fit.py  d3d9_label.py  d3d9_probe.py  decode_fb.py  drive.ps1  dxbc_sigs.py  fail_trees.py  fetch_thirdparty.ps1  find_callers.py  find_field100_store.py  find_idct.py  find_missing_indirect_targets.py  find_missing_materialized_targets.py  find_object_around_slot.py  find_slot_installer.py  frame_dump.py  highcut_packet_decode.py  map_slot_pages.py  materialized_targets.toml  (+20 more)
tools/franchise_re/: find_franchise_code.py
tools/packager/: CMakeLists.txt  manifest.toml.in
tools/packager/src/: cli.cpp  cli.h  errors.cpp  errors.h  folder_source.cpp  folder_source.h  game_source.h  installer.cpp  installer.h  iso_source.cpp  iso_source.h  main.cpp  manifest.cpp  manifest.h
tools/replay/: CMakeLists.txt
tools/replay/src/: image_dump.cpp  image_dump.h  trace_replay.cpp  xtr_player.cpp  xtr_player.h
tools/stick_widen/: Cargo.toml  restore.ps1
tools/stick_widen/src/: main.rs
tools/tunables/: build_schema.py  emit_runtime.py  merge_refined.py  prep_chunks.py
tools/vp6-converter/: .gitignore  Cargo.toml  README.md
tools/vp6-converter/src/: main.rs
(+24 files in other folders)
